--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "version": "0.2.2",
   "author": "Colby Fayock <hello@colbyfayock.com>",
   "dependencies": {
+    "@loadable/component": "^5.12.0",
     "axois": "0.0.1-security",
     "gatsby": "^2.19.43",
+    "gatsby-plugin-loadable-components-ssr": "^2.0.0",
     "gatsby-plugin-react-helmet": "^3.1.23",
     "gatsby-plugin-react-leaflet": "2.0.12",
     "gatsby-plugin-resolve-src": "^2.0.0",
